Fixed z-index issue with chevrons colliding with cards

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -40,7 +40,7 @@ body {
 .activeCard {
 	left: 50%;
 	transform: translateX(-50%);
-	z-index: 1000;
+	z-index: 99;
 }
 
 .nextCard {
